# socialGeneralizationSBI

./: .gitignore  LICENSE  README.md  model.py  pyproject.toml  sbi.ipynb  utils.py
