[tool.poetry]
name = "socialgeneralizationsbi"
version = "0.1.0"
description = ""
authors = ["valery <vagechirkov@gmail.com>"]
package-mode = false
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"
notebook = "6.4.12"
numpy = "1.23.5"
sbi = "^0.23.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
